src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgb(41, 40, 40);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.container {
  display: flex;
  background-color: rgb(73, 73, 73);
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding: 5px;
}

.about_container_container {
  background-color: rgb(197, 205, 216);
  margin: 1.2vw;
  padding: 20px;
  border-radius: 5px;
  width: 95%;
}

.project_container {
  height: 350px;
  justify-content: center;
  align-items: space-between;
  background-color: rgb(197, 205, 216);
  margin: 1.2vw;
  display: flex;
  padding: 20px;
  border-radius: 5px;
  max-width: max-content;
}

.project_item {
  max-width: 350px;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.about_container {
  display: flex;
  justify-content: center;
  align-items: space-between;
  flex-direction: row;

}

.img_container {
  padding: 10px;
  width: 90%;
  background-color: rgb(229, 237, 250);
  border-radius: 5px;
}

.me_img {
  width: 100%;
  width: 150px;
  color: black;
  background-color: rgb(197, 205, 216);;
}

.header_img {
  height: 100%;
  max-width: 100%;
  max-height: 10vh;
  padding: 10px;
  color: black;
}

.video {
  width: 250px;
  width: 90%;
}

.bottom_container {
  display: flex;
  flex-direction: row;
  padding-top: 20px;
  max-width: 500px;
}

.text {
  display: flex;
  flex-direction: column;
  padding: 10px;
}

.title {
  text-align: left;
  font-weight: bold;
  font-size: 20;
}

.subtitle {
  text-align: left;
}

.button_container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}

.website_button {
  width: 130px;
  background-color: #19b12b;
  border-radius: 15px;
  border: 1px solid #137e20;
  cursor: pointer;
  color: #ffffff;
  font-family: Arial;
  text-align: center;
  font-size: 15px;
  padding: 10px 10px;
  text-decoration: none;
}
.one_line_button {
  background-color: #19b12b;
  border-radius: 15px;
  border: 1px solid #137e20;
  cursor: pointer;
  color: #ffffff;
  font-family: Arial;
  text-align: center;
  font-size: 15px;
  padding: 10px 10px;
  text-decoration: none;
}

.website_button:hover {
  background-color: #179426;
}

.github {
  align-self: center;
  padding-left: 10px;
  color: black;
}

.project_footer {
  display: flex;
}

#more_info {
  justify-content: center;
}

